<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/flow_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/flow_intro"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/suspend_vs_flow"
            layout="@layout/layout_coroutine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_intro" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/flow_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_flow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suspend_vs_flow" />

        <TextView
            android:id="@+id/flow_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/flow_detail"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_check" />

        <include
            android:id="@+id/flow_operators"
            layout="@layout/layout_coroutine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_detail" />

        <TextView
            android:id="@+id/flow_operators_and_context"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/flow_operators_and_context"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_operators" />

        <include
            android:id="@+id/flow_context"
            layout="@layout/layout_coroutine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_operators_and_context" />

        <TextView
            android:id="@+id/flow_buffer_conflate_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/buffer_and_conflate"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_context" />

        <include
            android:id="@+id/flow_buffer_conflate"
            layout="@layout/layout_coroutine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_buffer_conflate_tv" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/flow_buffer_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buffer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_buffer_conflate" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/flow_conflate_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conflate"
            app:layout_constraintStart_toEndOf="@id/flow_buffer_check"
            app:layout_constraintTop_toTopOf="@id/flow_buffer_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
